--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="title wow lightSpeedIn">
                 <h1 class=" wow bounce" data-wow-delay="1s" data-wow-iteration="infinite">发现</h1>
                 <h1 class=" wow bounce" data-wow-delay="1.5s" data-wow-iteration="infinite">一个新的地方</h1><br>
-                <p>寻找当地专家的好去处，吃饭，购物或参观</p>
+                <p>寻找当地专家,找一个好的去处，吃饭，购物或参观</p>
+                <p>当地专家--<span style="display: inline-block;" class=" wow wobble" data-wow-delay="2s" data-wow-iteration="infinite">汪滔</span></p>
             </div>
         </div>
     </div>
