--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- 载入自定义的css -->
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/animate.css">
+    <style type="text/css">
+    	 .wow { visibility: hidden; }
+    </style>
 </head>
 
 <body>
