--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
                     <span class="glyphicon glyphicon-menu-hamburger"><span class="">菜单</span></span>
                 </button>
                 <a class="navbar-brand " href="#">
-                    <img class="wow hinge" data-wow-delay="1s" src="./images/旅游.png" style="width: 40px;height: 40px;">
+                    <img class="wow hinge" data-wow-delay="1s" src="./images/travel.png" style="width: 40px;height: 40px;">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
